change ui, fix add service button

--- a/HotelManagement/Areas/Admin/Views/Guest/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Delete.cshtml
@@ -5,13 +5,12 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2 class="card-title title ml-32">Delete Guest</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="ml-32">Are you sure you want to delete this guest?</h3>
 <div>
-    <h4>KhachHang</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal ml-32">
         <dt>
             @Html.DisplayNameFor(model => model.CCCD)
         </dt>
