--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2 class="card-title title ml-32">Registration Forms List</h2>
 
 @using (Html.BeginForm("Search", "RegistrationForm", FormMethod.Get, new { @class = "search-form" }))
 {
@@ -19,8 +19,8 @@
     </div>
 }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
+<p class="ml-32 mt-32 mb-24">
+    @Html.ActionLink("Add New Registration Form", "Create", "RegistrationForm", null, new { @class = "create-btn" })
 </p>
 <table class="table">
     <tr>
