--- a/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+        <h1 class="card-title title ml-32"">Dashboard</h1>
         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
             <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
         </a>
@@ -191,13 +191,13 @@
     </div>
 
     <!-- Content Row -->
-    <div class="row">
+    <!--<div class="row">-->
 
         <!-- Content Column -->
-        <div class="col-lg-6 mb-4">
+        <!--<div class="col-lg-6 mb-4">-->
 
             <!-- Project Card Example -->
-            <div class="card shadow mb-4">
+            <!--<div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
                 </div>
@@ -238,10 +238,10 @@
                              aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <!-- Color System -->
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-6 mb-4">
                     <div class="card bg-primary text-white shadow">
                         <div class="card-body">
@@ -310,10 +310,10 @@
 
         </div>
 
-        <div class="col-lg-6 mb-4">
+        <div class="col-lg-6 mb-4">-->
 
             <!-- Illustrations -->
-            <div class="card shadow mb-4">
+            <!--<div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">Illustrations</h6>
                 </div>
@@ -332,10 +332,10 @@
                         unDraw &rarr;
                     </a>
                 </div>
-            </div>
+            </div>-->
 
             <!-- Approach -->
-            <div class="card shadow mb-4">
+            <!--<div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                 </div>
@@ -353,6 +353,6 @@
             </div>
 
         </div>
-    </div>
+    </div>-->
 
 </div>
