--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2 class="card-title title ml-32">Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
