--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
@@ -5,12 +5,11 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2 class="card-title title ml-32">Registration Details</h2>
 
 <div>
-    <h4>PhieuThue</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal ml-32">
         <dt>
             @Html.DisplayNameFor(model => model.NgayLap)
         </dt>
@@ -61,6 +60,9 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MaPhieu }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.MaPhieu })
+</p>
+<p>
+    @Html.ActionLink("Back to List", "Index", "RegistrationForm", null, new { @class = "create-btn" })
+
 </p>
