--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
@@ -17,7 +17,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.MaPhieu)
-    <div class="form-group">
+    <div class="form-group ml-0">
         @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @if (Model.HienTrang == "Chưa nhận phòng")
@@ -47,12 +47,12 @@
                     <i class="fa-solid fa-x close-btn"></i>
                     <form id="booking-form">
                         <h2>Add Service</h2>
-                        <div class="form-group">
+                        <div class="form-group ml-0">
                             <label class="control-label">Room Type</label>
                             @Html.DropDownList("DichVu", null, htmlAttributes: new { @class = "form-control service-name" })
                             <span class="form-message"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group ml-0">
                             <label class="control-label">Client Quantity</label>
                             <input class="form-control service-quantity" type="number" min="1" max="4" />
                             <span class="form-message"></span>
@@ -65,7 +65,7 @@
     }
 
 
-    <div class="form-group">
+    <div class="form-group ml-0">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
