--- a/HotelManagement/Areas/Admin/Views/Room/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Details.cshtml
@@ -5,12 +5,11 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2 class="card-title title ml-32">Room Details</h2>
 
 <div>
-    <h4>Phong</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal ml-32">
         <dt>
             @Html.DisplayNameFor(model => model.HienTrang)
         </dt>
