--- a/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2 class="card-title title ml-32">Edit Room</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Phong</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaPhong)
@@ -38,12 +37,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default create-btn" />
             </div>
         </div>
     </div>
 }
 
-<div>
+<div class="pl-12 ml-32 mt-32 mb-24">
     @Html.ActionLink("Back to List", "Index")
 </div>
