--- a/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2 class="card-title title ml-32">Rooms Type List</h2>
 
 @using (Html.BeginForm("Search", "RoomType", FormMethod.Get, new { @class = "search-form" }))
 {
@@ -20,9 +20,10 @@
 }
 
 
-<p>
-    @Html.ActionLink("Create New", "Create")
+<p class="ml-32 mt-32 mb-24">
+    @Html.ActionLink("Add New Room Type", "Create", "RoomType", null, new { @class = "create-btn" })
 </p>
+
 <table class="table">
     <tr>
         <th>
