--- a/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
@@ -9,64 +9,64 @@
 
 <div>
     <hr />
-    <dl class="dl-horizontal ml-32">
-        <dt>
-            @Html.DisplayNameFor(model => model.CCCD)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CCCD)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SoDienThoai)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SoDienThoai)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TenNhanVien)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TenNhanVien)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NgaySinh)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NgaySinh)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ChucDanh)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChucDanh)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().MatKhau)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TaiKhoanNVs.First().MatKhau)
-        </dd>
-
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CCCD)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.CCCD)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TenNhanVien)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TenNhanVien)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NgaySinh)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.NgaySinh)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.SoDienThoai)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.SoDienThoai)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ChucDanh)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.ChucDanh)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().MatKhau)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TaiKhoanNVs.First().MatKhau)
+            </td>
+        </tr>
+    </table>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaNhanVien }) |
