--- a/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
@@ -34,10 +34,10 @@
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LoaiPhong.TenLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.LoaiPhong.TenLoaiPhong, "", new { @class = "text-danger" })
             </div>
         </div>
 
