--- a/HotelManagement/Areas/Admin/Views/Room/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Delete.cshtml
@@ -9,26 +9,26 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Phong</h4>
+    <h4>Room</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HienTrang)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HienTrang)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LoaiPhong.TenLoaiPhong)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LoaiPhong.TenLoaiPhong)
-        </dd>
-
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.HienTrang)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.HienTrang)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.LoaiPhong.TenLoaiPhong)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.LoaiPhong.TenLoaiPhong)
+            </td>
+        </tr>
+    </table>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
