--- a/HotelManagement/Areas/Admin/Views/RoomType/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Delete.cshtml
@@ -9,34 +9,34 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>LoaiPhong</h4>
+    <h4>Room Type</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TenLoaiPhong)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TenLoaiPhong)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GiaLoaiPhong)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GiaLoaiPhong)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HinhAnh)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HinhAnh)
-        </dd>
-
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TenLoaiPhong)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TenLoaiPhong)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.GiaLoaiPhong)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.GiaLoaiPhong)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.HinhAnh)
+            </th>
+            <td>
+                <img src="@Url.Content("~/Assets/admin/img/" + Model.HinhAnh)" style="width: 100px;" />
+            </td>
+        </tr>
+    </table>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
