--- a/HotelManagement/Areas/Admin/Views/Service/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Delete.cshtml
@@ -9,26 +9,26 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DichVu</h4>
+    <h4>Services</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TenDichVu)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TenDichVu)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GiaDichVu)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GiaDichVu)
-        </dd>
-
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TenDichVu)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TenDichVu)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.GiaDichVu)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.GiaDichVu)
+            </td>
+        </tr>
+    </table>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
