--- a/HotelManagement/Areas/Admin/Views/Staff/Delete.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Delete.cshtml
@@ -9,50 +9,50 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>NhanVien</h4>
+    <h4>Staff</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CCCD)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CCCD)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SoDienThoai)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SoDienThoai)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TenNhanVien)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TenNhanVien)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NgaySinh)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NgaySinh)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ChucDanh)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChucDanh)
-        </dd>
-
-    </dl>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CCCD)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.CCCD)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.SoDienThoai)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.SoDienThoai)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TenNhanVien)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.TenNhanVien)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NgaySinh)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.NgaySinh)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ChucDanh)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.ChucDanh)
+            </td>
+        </tr>
+    </table>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
